replace class selector exercise3 with and id selector in styles.css

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ body {
 }
 
 /*--------------- EXERCISE 3 STYLES ---------------- */
-.exercise3 {
+#exercise3 {
   text-align: center;
   margin: 5px;
   border-radius: 25px;
